--- a/blog-automation/.vscode/settings.json
+++ b/blog-automation/.vscode/settings.json
@@ -2,8 +2,13 @@
   "python.defaultInterpreterPath": "C:\\Users\\won20\\anaconda3\\envs\\blog_auto_LangGraph\\python.exe",
   "python.analysis.typeCheckingMode": "basic",
   "python.analysis.extraPaths": [
-    "C:\\Users\\won20\\anaconda3\\envs\\blog_auto_LangGraph\\Lib\\site-packages"
+    "C:\\Users\\won20\\anaconda3\\envs\\blog_auto_LangGraph\\Lib\\site-packages",
+    "C:\\Users\\won20\\AppData\\Roaming\\Python\\Python312\\site-packages"
   ],
+  "python.languageServer": "Pylance",
+  "python.analysis.diagnosticMode": "workspace",
+  "python.analysis.autoImportCompletions": true,
+  "python.analysis.indexing": true,
   "editor.formatOnSave": true,
   "files.trimTrailingWhitespace": true,
   "python.terminal.activateEnvironment": true,
