--- a/.gitignore
+++ b/.gitignore
@@ -1,51 +1,32 @@
-# Environment variables
+# 환경 변수
 .env
-*.env
-!.env.example
-!.env.template
-
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-venv/
-ENV/
-env/
-.venv
+.env.local
+.env.*.local
 
 # VS Code
 .vscode/*.log
-.vscode/settings.json.bak
+.vscode/launch.json
 
-# Lambda
+# Python
+**/__pycache__/
+**/*.pyc
+**/*.pyo
+**/.pytest_cache/
+**/.mypy_cache/
+**/.ruff_cache/
+*.egg-info/
+.Python
+venv/
+env/
+ENV/
+
+# Lambda 배포
 lambda/package/
 lambda/lambda.zip
+lambda.zip
 
-# Database
+# Docker
 pg_data/
-*.db
-*.sqlite
-
-# Logs
-logs/
 *.log
 
 # OS
@@ -53,20 +34,12 @@ logs/
 Thumbs.db
 desktop.ini
 
-# Temporary files
+# 임시 파일
 *.tmp
-*.temp
+*.bak
 *.swp
-*.swo
 *~
 
-# Data directories
-data/
-
-# Microsoft Office
-*.docx
-*.xlsx
-*.pptx
+# 문서 임시 파일
 ~$*.docx
 ~$*.xlsx
-~$*.pptx
