--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,58 +7,37 @@
       "command": "docker compose -f docker-compose.db.yml up -d",
       "problemMatcher": [],
       "group": "build",
-      "presentation": {
-        "reveal": "always",
-        "panel": "shared"
-      }
+      "presentation": { "reveal": "always", "panel": "shared" }
     },
     {
       "label": "🛑 DB 중지 (데이터 유지)",
       "type": "shell",
       "command": "docker compose -f docker-compose.db.yml down",
       "problemMatcher": [],
-      "presentation": {
-        "reveal": "always",
-        "panel": "shared"
-      }
+      "presentation": { "reveal": "always", "panel": "shared" }
     },
     {
       "label": "🗑️ DB 리셋 (데이터 삭제)",
       "type": "shell",
       "command": "docker compose -f docker-compose.db.yml down -v",
       "problemMatcher": [],
-      "presentation": {
-        "reveal": "always",
-        "panel": "shared"
-      }
+      "presentation": { "reveal": "always", "panel": "shared" }
     },
     {
       "label": "📊 DB 접속 (psql)",
       "type": "shell",
       "command": "docker compose -f docker-compose.db.yml exec postgres psql -U blog_user -d blog_automation",
       "problemMatcher": [],
-      "presentation": {
-        "reveal": "always",
-        "panel": "dedicated",
-        "focus": true
-      }
+      "presentation": { "reveal": "always", "panel": "dedicated", "focus": true }
     },
     {
       "label": "🧪 로컬 테스트",
       "type": "shell",
       "command": "${command:python.interpreterPath}",
-      "args": [
-        "${workspaceFolder}/lambda/test_local.py"
-      ],
+      "args": ["${workspaceFolder}/lambda/test_local.py"],
       "problemMatcher": [],
-      "group": {
-        "kind": "test",
-        "isDefault": true
-      },
-      "presentation": {
-        "reveal": "always",
-        "panel": "dedicated"
-      }
+      "group": { "kind": "test", "isDefault": true },
+      "presentation": { "reveal": "always", "panel": "dedicated" }
     },
     {
       "label": "🚀 Lambda 배포",
@@ -66,52 +45,41 @@
       "command": ".\\scripts\\deploy_lambda.ps1",
       "problemMatcher": [],
       "group": "build",
-      "presentation": {
-        "reveal": "always",
-        "panel": "dedicated"
-      }
+      "presentation": { "reveal": "always", "panel": "dedicated" }
     },
     {
       "label": "📦 의존성 설치",
       "type": "shell",
       "command": "${command:python.interpreterPath}",
-      "args": [
-        "-m",
-        "pip",
-        "install",
-        "-r",
-        "${workspaceFolder}/lambda/requirements.txt"
-      ],
+      "args": ["-m", "pip", "install", "-r", "${workspaceFolder}/lambda/requirements.txt"],
       "problemMatcher": [],
       "group": "build",
-      "presentation": {
-        "reveal": "always",
-        "panel": "shared"
-      }
+      "presentation": { "reveal": "always", "panel": "shared" }
     },
     {
       "label": "🔍 render.py 테스트",
       "type": "shell",
       "command": "${command:python.interpreterPath}",
-      "args": [
-        "${workspaceFolder}/lambda/render.py"
-      ],
+      "args": ["${workspaceFolder}/lambda/render.py"],
       "problemMatcher": [],
       "group": "test",
-      "presentation": {
-        "reveal": "always",
-        "panel": "dedicated"
-      }
+      "presentation": { "reveal": "always", "panel": "dedicated" }
     },
     {
       "label": "📝 샘플 데이터 삽입",
       "type": "shell",
       "command": "docker compose -f docker-compose.db.yml exec -T postgres psql -U blog_user -d blog_automation < sample_data.sql",
       "problemMatcher": [],
-      "presentation": {
-        "reveal": "always",
-        "panel": "shared"
-      }
+      "presentation": { "reveal": "always", "panel": "shared" }
+    },
+    {
+      "label": "🧪 WP.com 스모크 발행",
+      "type": "shell",
+      "command": "${command:python.interpreterPath}",
+      "args": ["${workspaceFolder}/tests/smoke_publish_wpcom.py"],
+      "problemMatcher": [],
+      "group": "test",
+      "presentation": { "reveal": "always", "panel": "dedicated", "focus": true }
     }
   ]
 }
