WordPress.com 발행 도구 및 S3 업로드 기능 추가
- WordPress.com 발행: publish_wpcom.py (이미지 업로드 포함)
- S3 업로드 스크립트: publish_s3.ps1, s3_publish.py
- Tistory 포스트 작성: compose_tistory_post.py
- WP.com 포스트 내보내기: wpcom_export_post_html.py
- 테스트 파일: dist/post.html, dist/images/ (이미지 업로드 테스트 완료)
- .gitignore 업데이트: AWS 키 및 보안 파일 제외

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,13 @@
 .env.local
 .env.*.local
 
+# 보안 - AWS 키 및 토큰
+*accessKeys.csv
+*_accessKeys.csv
+secrets/
+*.pem
+*.key
+
 # VS Code
 .vscode/*.log
 .vscode/launch.json
