Notion/Slack 통합 및 자동화 스크립트 추가
- Notion 통합: provision_db.py, logger.py, bootstrap.py, diag.py
- Slack 알림: slack_notify.py, notify_slack.py, ping_make_webhook.py
- 상태 전이: state_transition.py (DRAFT → PUBLISHED → SUCCESS/FAILED)
- WordPress.com 대량 발행: create_wpcom_posts_from_csv.py
- 주간 리포트: weekly_report.py
- 후킹 시스템: post_publish_hooks.py
- 자동화 스크립트: run_daily.ps1, run_benchmark_poc.ps1, run_status_flow.ps1
- DB 구조 생성: create_reports_db.py
- 유틸리티: check_notion_schema.py, tools_csv_sanitize.py
- 데이터: data/ (CSV 샘플 파일)
- 프로젝트 계획: plan/core_steps.yaml, week_1.json
- Lambda requirements 업데이트: 추가 패키지 포함
- .env.example 업데이트: Notion/Slack 환경변수 추가

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,41 @@
-# 로컬 DB 접속
+###############################################
+# ==== 로컬 DB / 기본 설정 ====
+###############################################
 DATABASE_URL=postgresql://blog_user:strong_password_here@localhost:5432/blog_automation
 
-# 모델 키
+###############################################
+# ==== 모델 API Keys ====
+###############################################
 OPENAI_API_KEY=sk-xxxx
 ANTHROPIC_API_KEY=sk-ant-xxxx
 
-# 알림(옵션)
+###############################################
+# ==== 알림(옵션) ====
+###############################################
 MAKE_WEBHOOK_URL=
 SLACK_WEBHOOK_URL=
 
-# AWS
+###############################################
+# ==== AWS (티스토리/네이버 HTML 패키지 업로드용) ====
+###############################################
 AWS_REGION=ap-northeast-2
 S3_BUCKET_TISTORY=blog-tistory-packages-xxxx
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+
+###############################################
+# ==== SerpAPI (콘텐츠 벤치마킹용) ====
+###############################################
+# SerpAPI 키 (https://serpapi.com/manage-api-key 에서 발급)
+SERPAPI_KEY=YOUR_SERPAPI_KEY
+
+# 검색 지역 및 언어 (기본값: 한국)
+SEARCH_LOCALE=ko-KR
+SEARCH_GL=kr
+SEARCH_HL=ko
+
+###############################################
+# ==== 기타 (로깅/환경 구분 등) ====
+###############################################
+ENVIRONMENT=local
+LOG_LEVEL=INFO
